--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,8 @@
 
         <activity android:name=".NYTArticle"></activity>
         <activity android:name=".FullScreenNewsActivity"></activity>
+        <activity android:name=".DictionaryActivity"></activity>
+        <activity android:name=".DictionaryFrameLayout"></activity>
 
     </application>
 
