--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,14 +14,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SearchedNewsList" android:label="@string/text1"/>
-        <activity android:name=".NewsFeedCover" android:label="@string/text1"/>
-        <activity android:name=".NewsFeeddetail" android:label="@string/text1"/>
-        <activity android:name=".MainActivity">
-        <intent-filter>
         <uses-library android:name="org.apache.http.legacy"
             android:required="false"/>
-        <activity android:name=".MainActivity" android:label="@string/app_name">
+        <activity android:name=".SearchedNewsList" />
+        <activity android:name=".NewsFeedCover" />
+        <activity android:name=".NewsFeeddetail" />
+        <activity android:name=".MainActivity">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
