--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,8 @@
 
         <activity android:name=".NYTArticle"></activity>
         <activity android:name=".FullScreenNewsActivity"></activity>
-        <activity android:name=".DictionaryActivity"></activity>
+        <activity android:name=".DictionaryActivity"
+            android:label="@string/dictionary"></activity>
         <activity android:name=".DictionaryFrameLayout"></activity>
 
     </application>
